# bank-fraud-detection

./: README.md  pyproject.toml  test.py
app/: device_lookup.pkl  ip_lookup.pkl  main.py  model.pkl  occ_lookup.pkl  scaler.pkl
notebook/: analysis.ipynb
